objects/BMCServiceDesk__BMC_BIOSElement__c.object
<CustomObject>
    <description>BMC_BIOSElement. CMDB Class that stores information about low-level, built-in software used to start a computer&apos;s operating system without accessing programs from a disk. A subclass of BMC_SystemSoftware, BMC_BIOSElement can be used to represent specific operating system and BIOS (basic input/output system) software elements in your IT environment. This class corresponds to the DMTF class CIM_BIOSElement.</description>
    <fields>
        <fullName>BMCServiceDesk__Bios_Characteristics__c</fullName>
        <label>BIOS Characteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Primary_BIOS__c</fullName>
        <label>Primary BIOS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Primary_OS__c</fullName>
        <label>Primary OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BIOS Element</label>
    <nameField>
        <label>BIOS Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIOS Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>